#4446 closed defect (fixed)
H264 with changing pps_id between fields fails to decode
| Reported by: | Michael Niedermayer | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | h264, regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description (last modified by )
Changing PPS_id between slices of a AU is not allowed in H264, its allowed though to change between fields
This has been reported by Vittorio Giovara to me privately, But he was not able to provide a sample file, so its not easy to fix. Its a "AVCHD 1080i60 file".
Regression since e708424b70bef8641e8a090ec4d9e8c4490db87e
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'pps_id_change.mov':
Metadata:
major_brand : qt
minor_version : 537199360
compatible_brands: qt
creation_time : 2015-04-01 21:53:13
Duration: 00:30:21.82, start: 0.000021, bitrate: 13508 kb/s
Stream #0:0(eng): Video: h264 (High) (avc1 / 0x31637661), yuv420p(bt709), 1920x1080 [SAR 1:1 DAR 16:9], 11936 kb/s, 29.97 fps, 29.97 tbr, 2997 tbn, 59.94 tbc (default)
Metadata:
creation_time : 2015-04-01 21:53:13
handler_name : Apple Alias Data Handler
encoder : AVCHD 1080i60
timecode : 00:00:00;00
Stream #0:1(eng): Audio: pcm_s16le (sowt / 0x74776F73), 48000 Hz, stereo, s16, 1536 kb/s (default)
Metadata:
creation_time : 2015-04-01 21:53:14
handler_name : Apple Alias Data Handler
Stream #0:2(eng): Data: none (tmcd / 0x64636D74)
Metadata:
creation_time : 2015-04-01 21:53:14
handler_name : Apple Alias Data Handler
timecode : 00:00:00;00
Unsupported codec with id 0 for input stream 2
Change History (2)
comment:1 by , 11 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
comment:2 by , 11 years ago
| Description: | modified (diff) |
|---|---|
| Summary: | H264 with changing pps_id within a AU fails to decode → H264 with changing pps_id between fields fails to decode |
Note:
See TracTickets
for help on using tickets.



Fixed in 98d0c4236c7542c87f012228d3bc88aea67bddc2