avcodec/h264: Be more tolerant to changing pps id between slices

Fixes Ticket4446

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>